Temporary branch for patched 6.1.2